package de.hallerweb.enterprise.prioritize.model.security;

public enum Action {
    CREATE, READ, UPDATE, DELETE
}